maze.lessons.maze.island.IslandMaze.scala.error
Escaper:2: error: Missing closing brace `}' assumed here
def keepHandOnSideWall = {gauche(); if (!estFaceMur) {avance()} else {while(estFaceMur()) {droite};avance()} }
^Escaper:2: error: expected class or object definition
def keepHandOnSideWall = {gauche(); if (!estFaceMur) {avance()} else {while(estFaceMur()) {droite};avance()} }
^Escaper:4: error: expected start of definition
override def run() { 
         ^